--- a/app/src/main/res/layout/fragment_profile_detail.xml
+++ b/app/src/main/res/layout/fragment_profile_detail.xml
@@ -1,13 +1,14 @@
 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:id="@+id/scrollView" >
 
     <LinearLayout
     android:orientation="vertical" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dp"
-    android:nestedScrollingEnabled="false">
+    android:nestedScrollingEnabled="false"
+        android:id="@+id/container_profile_detail">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -20,115 +21,7 @@
                 android:id="@+id/img_profile_list_element_portrait"
                 android:src="@drawable/ic_launcher" />
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="70dp">
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="六田　花子"
-                        android:id="@+id/txt_profile_detail_name"
-                        android:layout_margin="10dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="（32）"
-                        android:id="@+id/txt_profile_detail_age"
-                        android:layout_marginTop="10dp" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="神奈川県相模原市"
-                    android:id="@+id/txt_profile_detail_address"
-                    android:layout_marginLeft="30dp" />
-
-            </LinearLayout>
-
         </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="任意メモ・・・・・・・・・"
-            android:id="@+id/txt_profile_detail_memo"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目項目未定項目未定項目未定項目未定項目"
-            android:id="@+id/textView"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目項目未定項目未定項目未定項目未定項目"
-            android:id="@+id/textView2"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目項目未定項目未定項目未定項目未定項目"
-            android:id="@+id/textView3"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目項目未定項目未定項目未定項目未定項目"
-            android:id="@+id/textView4"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目項目未定項目未定項目未定項目未定項目"
-            android:id="@+id/textView5"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目未定項目項目未定項目未定項目未定項目未定項目"
-            android:id="@+id/textView6"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
 
     </LinearLayout>
 
