--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -13,7 +13,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/container_profile_edit"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:focusableInTouchMode="true">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -39,7 +40,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp">
+                android:layout_marginBottom="5dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="100dp"
@@ -61,7 +63,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" >
+                android:layout_marginBottom="5dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="100dp"
@@ -82,7 +85,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" >
+                android:layout_marginBottom="5dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="100dp"
@@ -103,7 +107,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" >
+                android:layout_marginBottom="5dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="100dp"
@@ -125,7 +130,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" >
+                android:layout_marginBottom="5dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="100dp"
