--- a/app/src/main/res/layout/partial_profile_list_element.xml
+++ b/app/src/main/res/layout/partial_profile_list_element.xml
@@ -21,33 +21,24 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="六田　花子"
                 android:id="@+id/txt_profile_list_element_name" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="（32）"
-                android:id="@+id/txt_profile_list_element_age" />
-
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="神奈川県相模原市"
             android:id="@+id/txt_profile_list_element_address" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="任意メモ・・・・・・・・・"
             android:id="@+id/txt_profile_list_element_memo" />
     </LinearLayout>
 
