--- a/app/src/main/res/menu/menu_profile_edit.xml
+++ b/app/src/main/res/menu/menu_profile_edit.xml
@@ -2,10 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="jp.gr.java_conf.kazuki.sixcat.ProfileEditActivity">
-    <item android:id="@+id/action_profile_edit_save" android:title="save"
-        android:orderInCategory="100" app:showAsAction="always" />
-    <item android:id="@+id/action_profile_edit_delete" android:title="del"
-        android:orderInCategory="100" app:showAsAction="always" />
-    <item android:id="@+id/action_profile_edit_cancel" android:title="cancel"
-        android:orderInCategory="100" app:showAsAction="always" />
+    <item android:id="@+id/action_profile_edit_save"
+        android:title="@string/menu_button_save"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_profile_edit_delete"
+        android:title="@string/menu_button_delete"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_profile_edit_cancel"
+        android:title="@string/menu_button_cancel"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
 </menu>
