--- a/app/src/main/res/layout/fragment_profile_detail.xml
+++ b/app/src/main/res/layout/fragment_profile_detail.xml
@@ -1,7 +1,7 @@
 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id="@+id/scrollView" >
+    android:id="@+id/fragment_profile_detail_root" >
 
     <LinearLayout
     android:orientation="vertical" android:layout_width="fill_parent"
