--- a/app/src/main/res/layout/partial_profile_detail_element_image.xml
+++ b/app/src/main/res/layout/partial_profile_detail_element_image.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:gravity="center_vertical">
 
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:id="@+id/lbl_profile_detail_element" />
+        android:id="@+id/lbl_profile_detail_element"
+        android:gravity="center_vertical" />
 
     <ImageView
         android:layout_width="80dp"
