fixed #37 fixed #38 選択項目の実装
Spinnerを追加して、DBから項目を読んでセットして、選択してください的なのを先頭につけて、保存したり表示したり・・・。

--- a/app/src/main/res/values/Integer.xml
+++ b/app/src/main/res/values/Integer.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="option_index_from">0</integer>
     <integer name="option_index_to">19</integer>
+    <integer name='option_no_select_id'>-1</integer>
 </resources>
